--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,13 @@ dependencies:
   http_parser: ^3.1.3
   video_player: ^0.7.2
   shared_preferences: ^0.4.3
+  json_annotation: ^2.0.0
   intl: any
 
-transformers:
-  - dartson
-
 dev_dependencies:
+  json_serializable: ^2.0.0
+  build_runner: ^1.0.0
+
   flutter_test:
     sdk: flutter
 
@@ -58,6 +59,7 @@ flutter:
     - assets/food.jpg
     - assets/background.jpg
     - assets/strava_logo_orange.png
+    - assets/strava_symbol_orange.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
