--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,14 @@ dependencies:
   path_provider: ^0.4.1
   flutter_blue: ^0.4.2
   flutter_webview_plugin: ^0.3.0+2
-  uuid: 2.0.0-rc1 
+  uuid: any
   http_parser: ^3.1.3
   video_player: ^0.7.2
   shared_preferences: ^0.4.3
   json_annotation: ^2.0.0
   simple_permissions: ^0.1.9
+  cached_network_image: ^0.6.0-alpha.2
+  flutter_cache_manager: ^0.3.0-alpha.2
   intl: any
 
 dev_dependencies:
